Update and rename Pagina_Eiffel.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<center><h1>Eiffel Opticos</h1></center>
 	<br>
 	<center><h3>Telefono:4422065252</h3></center>
-	<center><h3>Dirección:Av San Roque #222 Colonia San Gregorio</h3></center>
+	<center><h3>DirecciÃ³n:Av San Roque #222 Colonia San Gregorio</h3></center>
 	<center><img src="Eiffel.jpeg" width="800px" height="800px"/></center>
 	<br>
 	<center><img src="Eiffel2.jpg" width="400px" height="400px"/></center>
